# ICT_log_parser

./: .gitignore  Cargo.toml  README.md
res/: blacklist  products  whitelist
src/: daily_yield.rs  locals.rs  log_info_window.rs  logfile.rs  logfile_old.rs  main.rs  scan_dir.rs  time_and_date.rs
src/logfile/: keysight_log.rs
